<resources>
    <string name="app_name">Ответь за 5 секунд</string>
    <string name="AppName">Ответь за 5 секунд</string>
    <string name="main_play1on1">Играть вдвоем</string>
    <string name="main_teamplay">Играть в командах</string>
    <string name="stop_botton">Вперед!</string>
    <string name="Question_Bar">Ответить</string>
    <string name="Timer">5:00</string>
    <string name="WinPoints">Количество очков для победы</string>
    <string name="Fine">Штраф за неправильный ответ</string>
    <string name="LessPoints">-</string>
    <string name="MorePoints">+</string>
    <string name="DefaultPoints">10</string>
    <string name="Next_Button">Далее</string>
    <string name="answer_button">Ответить</string>
    <string name="OK">OK</string>
    <string name="Back">Назад</string>
    <string name="Rules">Правила</string>
    <string name="EnterText">Введите название команды</string>
    <string name="FullRules"><b>СУТЬ ИГРЫ:</b> за 5 секунд необходимо дать 3 ответа на вопрос. Тот, кто набирает максимальное количество баллов, побеждает.</string>
    <string name="RulesPlayers"><b>КОЛИЧЕСТВО ИГРОКОВ:</b> 2–10. В игре также может присутствовать ведущий. Если его нет, то роль ведущего на время хода может на себя взять игрок из другой команды.</string>
    <string name="RulesMain"><b>ХОД ИГРЫ:</b>\n <b>-</b> Ведущий читает вслух вопрос и нажимает на кнопку «Вперед!».\n
        <b>-</b> После нажатия кнопки «Вперед!» запускается таймер в 5 секунд, за которые игрок должен дать 3 ответа.\n
        <b>-</b> После того, как игрок отвечает на вопрос, ведущий нажимает на кнопку «ответить». Если игрок укладывается во времени, появляется окно, в котором следует нажать «Да», если другие игроки согласны с ответом, в противном случае нажать «Нет».\n
        <b>-</b> Далее ход переходит к другой команде.\n\n<i>Если же во время игры по какой-либо причине требуется изменить балл за предыдущий ход - нажмите на кнопку со стрелкой.</i></string>
    <string name="RulesEnd"><b>КОНЕЦ:</b> Игра заканчивается, когда набирается нужное количество очков.\n\n<b>-</b><i> В игре "1 на 1" - количество очков - 10.</i>\n
        <b>-</b><i>В командной игре максимальное количество допустимых команд - 10, максимальное количество очков - 30.</i></string>
</resources>