<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/mainColor">

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="34dp"
        android:onClick="startTeamGame"
        android:text="@string/main_teamplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:background="@color/lightAccent"
        android:textColor="@color/darkAccent"/>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:onClick="startOneOnOne"
        android:text="@string/main_play1on1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.36"
        android:background="@color/lightAccent"
        android:textColor="@color/darkAccent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:gravity="center_horizontal"
        android:text="@string/AppName"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/darkAccent"/>
</androidx.constraintlayout.widget.ConstraintLayout>