<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@color/mainColor">

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="183dp"
        android:onClick="Answer_Button"
        android:text="@string/stop_botton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:background="@color/mint"
        android:textColor="@color/darkAccent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="272dp"
        android:layout_height="171dp"
        android:gravity="center_horizontal"
        android:text="@string/Question_Bar"
        android:textColor="@color/darkAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="240dp"
        android:layout_height="69dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/Timer"
        android:textColor="@color/darkAccent"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textColor="@color/darkAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>