<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="proj.fivesecrule.GameActivity"
    android:background="@drawable/background_picture"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="267dp"
        android:layout_height="89dp"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="center"
        android:text="@string/Timer"
        android:textColor="@color/grey"
        android:textSize="50sp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="323dp"
        android:layout_height="221dp"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center_horizontal"
        android:text="@string/Question_Bar"
        android:textColor="@color/grey"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="275dp"
        android:layout_height="86dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/oswald_bold"
        android:text="TextView"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:onClick="Answer_Button"
        android:text="@string/stop_botton"
        android:textSize="24sp"
        android:background="@drawable/green_button"
        android:textColor="@color/darkAccent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"/>

    <Button
        android:id="@+id/change_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:alpha="0.4"
        android:background="@drawable/ic_back"
        android:onClick="Change_points"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
</androidx.appcompat.widget.LinearLayoutCompat>